<?xml version="1.0"?>
<package format="2">
  <name>sick_scan</name>
  <version>1.10.1</version>
  <description>
    A ROS driver for the SICK TiM and SICK MRS series of lidars.
    This package is based on the original sick_tim-repository of Martin Günther et al.
  </description>

  <maintainer email="michael.lehning@lehning.de">Michael Lehning</maintainer>
  <author email="michael.lehning@lehning.de">Michael Lehning</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sick_scan</url>
  <url type="repository">https://github.com/SICKAG/sick_scan</url>

  <!-- structure corresponds to tutorial package.xml like structure.
       e.g. http://wiki.ros.org/tf/Tutorials/Writing%20a%20tf%20broadcaster%20%28C%2B%2B%29 -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>


